Prevent horizontal scroll from right position on grid-toggle.

--- a/styles/base.styl
+++ b/styles/base.styl
@@ -16,6 +16,7 @@ html
 html, body
   margin: 0
   width: 100%
+  overflow-x: hidden
 
 body
   font-family: MyriadPro
